[tool.poetry]
name = "organiser"
version = "0.1.0"
description = "Python script to organise and de-duplicate photos, taking manually named directories into account along the way."
authors = ["Sam Martin <sam@abitmoredepth.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
exifread = "^2.1"
fire = "^0.1.3"
pendulum = "^2.0"
typing-extensions = "^3.7"
rx = "^3.1.0"
cryptography = "^2.8"
better_exceptions = "*"

[tool.poetry.dev-dependencies]
flake8 = "^3.7"
flake8-blind-except = "*"
flake8-builtins = "*"
flake8-commas = "^2.0"
flake8-comprehensions = "^2.2"
flake8-debugger = "^3.1"
flake8-docstrings = "^1.4"
flake8-isort = "^2.7"
flake8-logging-format = "*"
flake8-mutable = "^1.2"
flake8-rst-docstrings = "*"
flake8-todo = "^0.7.0"
ipdb = "*"
ipython = "^7.5"
isort = {version = "^4.3",extras = ["pyproject"]}
mypy = "^0.720"
pydocstyle = "~4"
pylint = "^2.3"
pytest = "^5.1"
pytest-cov = "^2.7"
python-language-server = {version = "*",extras = ["all"]}
invoke = "^1.3"
pyls-mypy = "^0.1.8"
pyls-isort = "^0.1.1"
yapf = "==0.28.0"
pdbpp = "^0.10.2"

[tool.poetry.scripts]
organiser = "organiser.main:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
