[tool.poetry]
name = "organiser"
version = "0.1.0"
description = "Python script to organise and de-duplicate photos, taking manually named directories into account along the way."
authors = ["Sam Martin <sam@abitmoredepth.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "*"
exifread = "*"
fire = "*"
pendulum = "*"
typing-extensions = "*"
rx = "*"
cryptography = "*"
better_exceptions = "*"

[tool.poetry.dev-dependencies]
flake8 = "*"
flake8-blind-except = "*"
flake8-builtins = "*"
flake8-commas = "*"
flake8-comprehensions = "*"
flake8-debugger = "*"
flake8-docstrings = "*"
flake8-isort = "*"
flake8-logging-format = "*"
flake8-mutable = "*"
flake8-rst-docstrings = "*"
flake8-todo = "*"
ipdb = "*"
ipython = "*"
isort = {version = "*",extras = ["pyproject"]}
mypy = "*"
pydocstyle = "*"
pylint = "*"
pytest = "*"
pytest-cov = "*"
python-language-server = {version = "*",extras = ["all"]}
invoke = "*"
pyls-mypy = "*"
pyls-isort = "*"
yapf = "*"
pdbpp = "*"

[tool.poetry.scripts]
organiser = "organiser.main:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
